--- a/index.html
+++ b/index.html
@@ -1529,8 +1529,8 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
   const mealRadios = document.querySelectorAll('input[name="meals"]');
   const customMealInputContainer = document.getElementById('customMealInputContainer');
   const modeRadios = document.querySelectorAll('input[name="mode"]');
-  const modeSection = document.getElementById('modeSection'); // ← 設定方法選択を囲むdiv（idを付けてください）
   const counterContainer = document.getElementById('counterContainer');
+  const modeSection = document.querySelector('fieldset legend:contains("設定方法選択")')?.parentElement || document.querySelectorAll('fieldset')[1];
   const leftBtn = document.getElementById('leftBtn');
   const rightBtn = document.getElementById('rightBtn');
   const counterValue = document.getElementById('counterValue');
@@ -1550,13 +1550,12 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
   let p = 1;
   let currentCount = 1;
 
-  // === 魚リスト生成＋状態保持 ===
+  // === 魚リスト描画制御 ===
   let selectedInclude = new Set();
   let selectedExclude = new Set();
 
   proposeBtn.addEventListener('click', async () => {
     proposeModal.style.display = 'flex';
-
     try {
       const res = await fetch("./docs/recipes.json");
       const json = await res.json();
@@ -1567,9 +1566,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         if (!group) continue;
         for (const key in group) {
           const entry = group[key];
-          if (Array.isArray(entry["fish-name"])) {
-            entry["fish-name"].forEach(f => fishSet.add(f));
-          }
+          if (Array.isArray(entry["fish-name"])) entry["fish-name"].forEach(f => fishSet.add(f));
         }
       }
       const fishList = Array.from(fishSet).sort();
@@ -1600,8 +1597,8 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
           excludeFishContainer.appendChild(excLabel);
         });
 
-        const includeBoxes = Array.from(document.querySelectorAll(".includeFish"));
-        const excludeBoxes = Array.from(document.querySelectorAll(".excludeFish"));
+        const includeBoxes = document.querySelectorAll(".includeFish");
+        const excludeBoxes = document.querySelectorAll(".excludeFish");
 
         includeBoxes.forEach((incBox, i) => {
           incBox.disabled = !!excludeBoxes[i].checked;
@@ -1630,6 +1627,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         });
       }
 
+      // 使いたい魚欄
       document.querySelectorAll('input[name="includeFishMode"]').forEach(radio => {
         radio.addEventListener("change", e => {
           if (e.target.value === "specify") {
@@ -1644,6 +1642,7 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         });
       });
 
+      // 除外魚欄
       document.querySelectorAll('input[name="excludeFishMode"]').forEach(radio => {
         radio.addEventListener("change", e => {
           if (e.target.value === "specify") {
@@ -1658,76 +1657,58 @@ tbody tr:hover{background:rgba(43,108,176,0.03)}
         });
       });
 
-      const incChecked = Array.from(document.getElementsByName('includeFishMode')).find(r => r.checked)?.value;
-      const excChecked = Array.from(document.getElementsByName('excludeFishMode')).find(r => r.checked)?.value;
+      const incChecked = Array.from(document.getElementsByName('includeFishMode')).find(r=>r.checked)?.value;
+      const excChecked = Array.from(document.getElementsByName('excludeFishMode')).find(r=>r.checked)?.value;
       if (incChecked === 'specify' || excChecked === 'specify') {
         renderFishCheckboxes();
         includeFishContainer.style.display = (incChecked === 'specify') ? 'block' : 'none';
         excludeFishContainer.style.display = (excChecked === 'specify') ? 'block' : 'none';
       }
-
     } catch (e) {
       console.error("魚リスト生成中にエラー:", e);
     }
   });
 
-  // --- モーダル閉じる ---
+  // モーダル閉じる
   closeProposeBtn.addEventListener('click', () => proposeModal.style.display = 'none');
-  proposeModal.addEventListener('click', e => {
-    if (e.target === proposeModal) proposeModal.style.display = 'none';
-  });
+  proposeModal.addEventListener('click', e => { if (e.target === proposeModal) proposeModal.style.display = 'none'; });
 
-  // --- 食数設定 ---
+  // === 食数設定 ===
   mealRadios.forEach(r => r.addEventListener('change', () => {
-    if (r.value === 'custom') {
+    const val = r.value;
+    if (val === 'custom') {
       customMealInputContainer.style.display = 'block';
+      modeSection.style.display = 'block';
     } else {
       customMealInputContainer.style.display = 'none';
     }
 
-    p = (r.value === 'custom') ? Number(document.getElementById('customMealInput').value || 1) : Number(r.value);
-
-    // ✅ 追加: 「1食」選択時は設定方法選択＆カウンターを非表示
-    if (r.value === '1') {
+    // 1食のときは設定方法と食数窓を非表示
+    if (val === '1') {
       modeSection.style.display = 'none';
       counterContainer.style.display = 'none';
     } else {
       modeSection.style.display = 'block';
-      // "個別設定"が選ばれている場合のみカウンター表示
-      const eachMode = Array.from(modeRadios).find(radio => radio.checked && radio.value === 'each');
-      counterContainer.style.display = (eachMode) ? 'block' : 'none';
     }
+
+    p = (val === 'custom') ? Number(document.getElementById('customMealInput').value || 1) : Number(val);
   }));
 
-  document.getElementById('customMealInput').addEventListener('input', e => {
-    p = Number(e.target.value || 1);
-  });
+  document.getElementById('customMealInput').addEventListener('input', e => { p = Number(e.target.value || 1); });
 
-  // --- 設定方法選択 ---
+  // === 設定方法選択 ===
   modeRadios.forEach(r => r.addEventListener('change', () => {
     counterContainer.style.display = (r.value === 'each') ? 'block' : 'none';
   }));
 
-  // --- カウンター ---
-  leftBtn.addEventListener('click', () => {
-    if (currentCount > 1) currentCount--;
-    counterValue.textContent = currentCount;
-  });
-  rightBtn.addEventListener('click', () => {
-    if (currentCount < p) currentCount++;
-    counterValue.textContent = currentCount;
-  });
+  // === カウンター ===
+  leftBtn.addEventListener('click', () => { if (currentCount > 1) currentCount--; counterValue.textContent = currentCount; });
+  rightBtn.addEventListener('click', () => { if (currentCount < p) currentCount++; counterValue.textContent = currentCount; });
 
-  // --- カスタム欄表示 ---
-  diffRadios.forEach(r => r.addEventListener('change', () => {
-    diffContainer.style.display = (r.value === 'custom') ? 'block' : 'none';
-  }));
-  timeRadios.forEach(r => r.addEventListener('change', () => {
-    timeContainer.style.display = (r.value === 'custom') ? 'block' : 'none';
-  }));
-  costRadios.forEach(r => r.addEventListener('change', () => {
-    costContainer.style.display = (r.value === 'custom') ? 'block' : 'none';
-  }));
+  // === カスタム入力欄 ===
+  diffRadios.forEach(r => r.addEventListener('change', () => diffContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
+  timeRadios.forEach(r => r.addEventListener('change', () => timeContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
+  costRadios.forEach(r => r.addEventListener('change', () => costContainer.style.display = (r.value === 'custom') ? 'block' : 'none'));
 })();
 
 
